<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <artifactId>spring-boot-starter-parent</artifactId>
      <groupId>org.springframework.boot</groupId>
      <relativePath/>
      <version>3.2.2</version>
   </parent>
   <groupId>ch.sbb.atlas</groupId>
   <artifactId>atlas</artifactId>
   <version>1.643.0</version>
   <packaging>pom</packaging>
   <name>Atlas</name>
   <description>ATLAS - SKI Business Application</description>
   <properties>
      <!-- Project Settings -->
      <java.version>21</java.version>
      <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
      <timestamp>${maven.build.timestamp}</timestamp>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

      <!-- Spring -->
      <spring-cloud.version>2023.0.0</spring-cloud.version>
      <spring-openapi-ui.version>2.3.0</spring-openapi-ui.version>

      <swagger-core.version>2.2.20</swagger-core.version>
      <tika-core.version>2.9.1</tika-core.version>

      <!-- REST Doc -->
      <asciidoctor-plugin.version>3.0.0</asciidoctor-plugin.version>
      <spring-restdocs-mockmvc.version>3.0.1</spring-restdocs-mockmvc.version>
      <spring-auto-rest-docs-core.version>2.0.11</spring-auto-rest-docs-core.version>

      <!-- Geo Data Libs -->
      <proj4j.version>1.3.0</proj4j.version>
      <jts.version>1.19.0</jts.version>
      <protoc.version>3.25.3</protoc.version>
   </properties>
   <modules>
      <!-- Order is important here -->
      <!-- Libs first -->
      <module>kafka</module>
      <module>base-atlas</module>
      <module>user-administration-security</module>
      <!--  Services -->
      <module>mail</module>
      <module>scheduling</module>
      <module>line-directory</module>
      <module>business-organisation-directory</module>
      <module>service-point-directory</module>
      <module>prm-directory</module>
      <module>export-service-point</module>
      <module>import-service-point</module>
      <module>user-administration</module>
      <module>workflow</module>
      <module>location</module>
      <!-- Combine APIs -->
      <module>apim-configuration</module>
      <module>gateway</module>
      <module>frontend</module>
   </modules>

   <dependencyManagement>
      <dependencies>
         <!-- Imported Poms -->
         <dependency>
            <artifactId>spring-cloud-dependencies</artifactId>
            <groupId>org.springframework.cloud</groupId>
            <scope>import</scope>
            <type>pom</type>
            <version>${spring-cloud.version}</version>
         </dependency>

         <!-- Third Party-->
         <dependency>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <groupId>org.hibernate.orm</groupId>
            <version>${hibernate.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${spring-openapi-ui.version}</version>
         </dependency>
         <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-common</artifactId>
            <version>${spring-openapi-ui.version}</version>
         </dependency>
         <dependency>
            <artifactId>flyway-core</artifactId>
            <groupId>org.flywaydb</groupId>
            <version>${flyway.version}</version>
         </dependency>
         <dependency>
            <groupId>org.locationtech.proj4j</groupId>
            <artifactId>proj4j</artifactId>
            <version>${proj4j.version}</version>
         </dependency>
         <dependency>
            <groupId>org.locationtech.proj4j</groupId>
            <artifactId>proj4j-epsg</artifactId>
            <version>${proj4j.version}</version>
         </dependency>
         <dependency>
            <groupId>org.locationtech.jts</groupId>
            <artifactId>jts-core</artifactId>
            <version>${jts.version}</version>
         </dependency>
         <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protoc</artifactId>
            <version>${protoc.version}</version>
            <type>pom</type>
         </dependency>
         <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protoc.version}</version>
         </dependency>
         <dependency>
            <artifactId>aws-java-sdk-s3</artifactId>
            <groupId>com.amazonaws</groupId>
            <version>1.12.663</version>
         </dependency>

         <dependency>
            <artifactId>spring-restdocs-mockmvc</artifactId>
            <groupId>org.springframework.restdocs</groupId>
            <version>${spring-restdocs-mockmvc.version}</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <groupId>capital.scalable</groupId>
            <artifactId>spring-auto-restdocs-core</artifactId>
            <version>${spring-auto-rest-docs-core.version}</version>
            <scope>test</scope>
         </dependency>
         <dependency>
            <artifactId>mockito-inline</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>5.2.0</version>
         </dependency>
         <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>${tika-core.version}</version>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>org.asciidoctor</groupId>
               <artifactId>asciidoctor-maven-plugin</artifactId>
               <version>${asciidoctor-plugin.version}</version>
               <executions>
                  <execution>
                     <id>generate-docs</id>
                     <phase>prepare-package</phase>
                     <goals>
                        <goal>process-asciidoc</goal>
                     </goals>
                     <configuration>
                        <attributes>
                           <buildTime>${maven.build.timestamp}</buildTime>
                           <name>${project.name}</name>
                           <snippets>${project.build.directory}/generated-snippets</snippets>
                           <version>${project.version}</version>
                        </attributes>
                        <backend>html</backend>
                        <doctype>book</doctype>
                        <outputDirectory>target/classes/static</outputDirectory>
                        <sourceDirectory>src/docs/asciidocs</sourceDirectory>
                     </configuration>
                  </execution>
               </executions>
               <dependencies>
                  <dependency>
                     <groupId>org.springframework.restdocs</groupId>
                     <artifactId>spring-restdocs-asciidoctor</artifactId>
                     <version>${spring-restdocs.version}</version>
                  </dependency>
               </dependencies>
            </plugin>
            <plugin>
               <artifactId>jacoco-maven-plugin</artifactId>
               <executions>
                  <execution>
                     <goals>
                        <goal>prepare-agent</goal>
                     </goals>
                     <id>prepare-jacoco-agent</id>
                  </execution>
                  <execution>
                     <goals>
                        <goal>report</goal>
                     </goals>
                     <id>report-jacoco-post-unit-test</id>
                     <phase>test</phase>
                  </execution>
               </executions>
               <groupId>org.jacoco</groupId>
               <version>0.8.11</version>
            </plugin>
            <plugin>
               <artifactId>spring-boot-maven-plugin</artifactId>
               <configuration>
                  <excludes>
                     <exclude>
                        <artifactId>lombok</artifactId>
                        <groupId>org.projectlombok</groupId>
                     </exclude>
                  </excludes>
               </configuration>
               <groupId>org.springframework.boot</groupId>
            </plugin>
            <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
               <groupId>org.apache.maven.plugins</groupId>
               <version>${maven-compiler-plugin.version}</version>
               <configuration>
                  <annotationProcessorPaths>
                     <path>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok</artifactId>
                        <version>${lombok.version}</version>
                     </path>
                     <path>
                        <groupId>org.hibernate.orm</groupId>
                        <artifactId>hibernate-jpamodelgen</artifactId>
                        <version>${hibernate.version}</version>
                     </path>
                  </annotationProcessorPaths>
               </configuration>
            </plugin>
            <plugin>
               <artifactId>maven-source-plugin</artifactId>
               <executions>
                  <execution>
                     <goals>
                        <goal>jar</goal>
                     </goals>
                     <id>attach-sources</id>
                  </execution>
               </executions>
               <groupId>org.apache.maven.plugins</groupId>
               <version>${maven-source-plugin.version}</version>
            </plugin>
            <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-resources-plugin</artifactId>
               <configuration>
                  <propertiesEncoding>UTF-8</propertiesEncoding>
                  <nonFilteredFileExtensions>
                     <nonFilteredFileExtension>pdf</nonFilteredFileExtension>
                  </nonFilteredFileExtensions>
               </configuration>
            </plugin>
         </plugins>
      </pluginManagement>
   </build>
</project>
